Sun Nov 17 18:12:20 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.23
	* doc/*: rebuilding the docs

Sat Nov 16 23:23:41 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/libxslt.c: make sure to register EXSLT for the bindings
	* python/tests/Makefile.am python/tests/exslt.py: add a specific test
	* xsltproc/xsltproc.c: minor cleanup

Fri Nov 15 12:35:57 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am python/tests/Makefile.am: trying to fix #98518
	  when building outside of the source tree

Thu Nov 14 21:39:37 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/generator.py: xpathObjectRet() pertains to the libxml2
	  module, add the namespace.

Thu Nov 14 18:48:00 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libxslt/win32config.h: cleanup
	* win32/Makefile.mingw: new file, integrated mingw in JScript configure
	* win32/Makefile.msvc: modified to allow mingw coexistence
	* win32/configure.js: integrated mingw
	* win32/Readme.txt: cleanup
	* xsltproc/xsltproc.c: allowed stdarg for mingw

Thu Nov 14 07:22:23 MST 2002 John Fleck <jfleck@inkstain.net>

	* doc/xsltproc.1
	* doc/xsltproc.html - ran stylesheets to update man page
	and html with Daniel's fix to #95510

Thu Nov 14 15:10:13 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: applied patch from Brian McCauley fixing #95493 
	* doc/xsltproc.xml: fixing #95510 missing description of --writesubtree
	* README: fix the bug page URL

Thu Nov 14 10:03:12 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.c: make sure the fixup for key() reported
	  by John Escott actually works.
	* tests/docs/Makefile.am tests/docs/bug-98.xml
	  tests/general/Makefile.am tests/general/bug-98.*: added the
	  example in the regression tests for this case

Wed Nov 13 10:35:46 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixes bug #97969 for @*[...] patterns